bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:6: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (a+b == 2)
       ^